--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
-    "formidable": "^1.2.2",
     "fs": "^0.0.1-security",
-    "lodash": "^4.17.21",
     "mongoose": "^5.11.17",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   }
 }
